# ratel

./: LICENSE  Makefile  README.md  buildenv.mk  install.sh
App/: .syscall.c.swp  App.c  App.cpp  App.h  CMake_asm.cmake  Makefile  app.ldscript  do_ctags.sh  dynamorio_u.c  dynamorio_u.h  iovec_helper.c  iovec_helper.h  make.sh  rwlock.cpp  rwlock.h  syscall.c  syscall.c.bak  syscall.txt.ods  syscallno.txt  thread_helper.cpp  thread_helper.h
App/core/: dynamo.c  loader_shared.c  os_shared.h  sgx_edge.c  sgx_edge.h
App/extra/: configure_temp.h
App/startup/: asm_defines.asm  configure_defines.h  x86.asm  x86.asm.s
Drrun/: Makefile  do_ctags.sh  drrun
Drrun/core/: iox.h  optionsx.h
Drrun/extra/: configure.h  configure_defines.h  configure_temp.h
Drrun/include/: dr_ir_instr.h  dr_ir_instrlist.h  dr_ir_macros_aarch64.h  dr_ir_macros_arm.h  dr_ir_opcodes_aarch64.h  dr_ir_opcodes_x86.h  dr_ir_utils.h  dr_tools.h
Drrun/tools/: drrun.c  drrun.c.bak
Enclave/: Makefile  dynamorio.config.xml  dynamorio.edl  dynamorio.lds  dynamorio_t.c  dynamorio_t.h
Enclave/core/: annotations.c  config.c  dispatch.c  dynamo.c  dynamorio.ldscript  emit.c  fcache.c  fragment.c  globals.h  hashtable.h  hashtablex.h  heap.c  heap.h  hotpatch.c  io.c  jit_opt.c  link.c  module_list.c  moduledb.c  monitor.c  nudge.c  options.c  os_shared.h  perscache.c  stats.c  string.c  synch.c  translate.c  utils.c  utils.h  vmareas.c  vmareas.h
Enclave/debug/: CMakeCache.txt
Enclave/extra/: configure.h  configure_temp.h  event_strings.h
Enclave/include/: dr_annotation.h  dr_api.h  dr_defines.h  dr_events.h  dr_frontend.h  dr_ir_macros.h  dr_ir_macros_x86.h
Enclave/sgx_edge/: .call_out.c.swp  call_in.c  call_out.c  call_out.h  complex.c  complex.h  def_ioctl.h  defines.h  layout.ods  sgx_defines.h  sgx_instr.c  sgx_instr.h  sgx_intelsdk.h  sgx_io.h  sgx_mm.c  sgx_mm.h  sgx_signal.c  sgx_signal.h  st_size.h  struct_size.h  syscall.h  syscall_no.h  syscall_no64.h
clientSample/: CMakeLists.txt  myclient.c
cpu_setup/: .cache.mk  Makefile  RDWR_FSGS_base.c
dbi_test/: Makefile  hello  hello.c  lighttpd.1.4.54  lighttpd.conf  mallocfree  memcached  newdel  newdel.cpp  sgx_file  sgx_file.c  sgx_mm  sgx_mm.c  sgx_mm2  sgx_mm2.c  sgx_procmaps  sgx_procmaps.c  signal_SIGALARM.c  signal_SIGILL.c
dbt_test/: cat.c  mallocfree.c  sgx_file.c  sgx_mm2.c  signal_SIGUSR1.c
drrun/: Makefile  make.sh
exp_eval/: data_regular.py  eval_spec2006_result.ods  extract_trans.sh
exp_eval/462.libquantum/Docs/: 462.libquantum.html  462.libquantum.txt  CHANGES  INSTALL  Makefile.in  Makefile.orig  README  README.txt  configure.in  flags.html  quantum.h.in
hacking/: check.sh  replace.sh
misc/: dyrio2sgx.sh
test/: .file.c.swp  args.c  argtest  file.c  fileop  hello  hello.c  program.txt  test-dup  test-dup.c  tricky.txt
(+710 files in other folders)
